[#3] application.properties mybatis와 애플리케이션 네임 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=springboot_template_pjt
+spring.application.name=sportsfit
 
 # server port
 server.port=9000
@@ -34,7 +34,7 @@ spring.servlet.multipart.max-file-size=10MB
 com.sportsfit.boot.upload.path=C:\\filetest\\upload
 
 # MyBatis
-mybatis.type-aliases-package=com.javalab.board.vo
+mybatis.type-aliases-package=com.sportsfit.shop.vo
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
