[#4] application.properties 캐릭터 인코딩 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,11 @@ logging.level.jdbc.audit=info
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
 
+# character encoding
+server.servlet.encoding.charset=utf-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
+
 # Image Upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=C:\\filetest\\upload
