[#16] 회원가입 이메일 관련 처리 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,4 +63,14 @@ spring.security.oauth2.client.registration.kakao.client-secret=n7wKcIPbK29Nr34hP
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
 
+
+# Google Mail Verification
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=studyinghajin2@gmail.com
+spring.mail.password=yych cbav egpz byqe
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#
 smartapi.key=RCQhcBaRSL95DN21bVVqew
