--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
     // Test Case 에서 롬복 사용
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
@@ -42,7 +43,6 @@ dependencies {
     // thymeleaf template layout 관련 의존성
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.2.1'
 
-
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
@@ -51,7 +51,6 @@ dependencies {
 
     // validation
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
-
 
     // SQL 로그 의존성
     implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
@@ -66,6 +65,11 @@ dependencies {
 
     // 소셜 로그인
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    // 메일 관련
+    implementation 'com.sun.mail:jakarta.mail:2.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
 
 }
 
