--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,7 @@ server.servlet.encoding.force=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.location=C:\\filetest\\upload
 spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=50MB
 
 com.sportsfit.boot.upload.path=C:\\filetest\\upload
 
