[#33] 관리자페이지 추가. 이미지 출력 안되는 오류

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,6 +72,7 @@ spring.mail.username=studyinghajin2@gmail.com
 spring.mail.password=yych cbav egpz byqe
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 #
 smartapi.key=RCQhcBaRSL95DN21bVVqew
